fixed shifted android in general menu

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -232,8 +232,8 @@ section {
     transform: none;
     cursor: default;
     left: 518px;
-    top: 68px;
-    z-index: 300;
+    top: 65px;
+    z-index: -100;
   }
 
   &__center-phone {
